--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -24,7 +24,7 @@ nav
 		font-size: 15px
 		color: #FFFFFF
 		&:hover
-			text-decoration: 
+			text-decoration: none
 			color: $main-color
 	&_item
 		border-right: 2px dotted black
@@ -55,7 +55,7 @@ nav
 		font-size: 12px
 		color: #FFFFFF
 	&_phone
-		margin-top: 4px
+		margin-top: 8px
 		display: block
 		text-align: right
 		line-height: 12px
